--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
 .button {
@@ -11,6 +12,7 @@
   margin-top: 150px;
   margin-left: auto;
   margin-right: auto;
+  cursor: pointer;
 }
 
 .popup {
@@ -20,7 +22,7 @@
   position: relative;
 }
 
-.hiden {
+.hidden {
   visibility: hidden;
 }
 
